✨ feat: 레이저 센서 측정값 전송 형식 변경에 따른 기능 수정